--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -174,8 +174,8 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "➥ <b>𝗝𝗮𝗻𝗶 𝗦𝘁𝗮𝗿𝘁𝗲𝗱 𝗦𝘁𝗿𝗲𝗮𝗺𝗶𝗻𝗴 |</b>\n\n<b>● 𝗧𝗶𝘁𝗹𝗲 :</b> <a href={0}>{1}</a>\n<b>● 𝗧𝗶𝗺𝗲 :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>● 𝗣𝗹𝗮𝘆 :</b> {3}"
-stream_2 : "➥ <b>𝗝𝗮𝗻𝗶 𝗦𝘁𝗮𝗿𝘁𝗲𝗱 𝗦𝘁𝗿𝗲𝗮𝗺𝗶𝗻𝗴 |</b>\n\n<b>● Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>● Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}"
+stream_1 : "➥ <b>𝗦𝗮𝗻𝗮 𝗦𝘁𝗮𝗿𝘁𝗲𝗱 𝗦𝘁𝗿𝗲𝗮𝗺𝗶𝗻𝗴 |</b>\n\n<b>● 𝗧𝗶𝘁𝗹𝗲 :</b> <a href={0}>{1}</a>\n<b>● 𝗧𝗶𝗺𝗲 :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>● 𝗣𝗹𝗮𝘆 :</b> {3}"
+stream_2 : "➥ <b>𝗦𝗮𝗻𝗮 𝗦𝘁𝗮𝗿𝘁𝗲𝗱 𝗦𝘁𝗿𝗲𝗮𝗺𝗶𝗻𝗴 |</b>\n\n<b>● Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>● Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}"
 
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
